# yt-paper-to-audio

./: .env.example  .gitignore  README.md  paper_to_audio.py  pyproject.toml  run_batch.sh
.github/skills/paper-to-audio-summary/: SKILL.md
notebooks/: 01_process_paper.ipynb
