[project]
name = "yt-paper-to-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "kokoro>=0.9.4",
    "numpy>=2.5.0",
    "scipy>=1.18.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "openai>=1.0.0",
    "dotenv>=0.9.9",
    "litellm>=1.90.1",
    "pypdf>=6.14.2",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2",
]
